# crates/kirra-core/Cargo.toml
#
# kirra-core — the LEAN safety/contract foundation extracted from the
# kirra-verifier monolith (de-monolith Stage 1, ADR pending). Deliberately
# dependency-light: NO tokio / axum / rusqlite / reqwest / ML. Crates that need the
# foundational types (the adapter, the planner, the map, parko) depend on THIS, so the
# certified-governor surface does not drag the verifier service's heavy tree.
#
# Stage 1 holds the foundational posture types (FleetPosture / NodeTrustState),
# previously trapped in the heavy `verifier.rs`. Later stages move the governor / the
# kinematics-contract talisman here as verbatim, re-exported blocks.
[package]
name = "kirra-core"
version = "0.1.0"
edition = "2021"
description = "Lean safety/contract foundation for the Kirra stack — no service/runtime deps."
repository = "https://github.com/kirra-systems/kirra-runtime-sdk"
license-file = "../../COPYRIGHT"
publish = false  # proprietary (see COPYRIGHT) — not for crates.io

[features]
# Off by default so the shipping crate stays serde-only for the consumers that only
# need the foundation (the planner, the lane map, parko, the governor-service). The
# `capture` module's JSONL writer pulls tokio + serde_json + tracing + the wire schema;
# the SDK and the ROS2 adapter enable this feature (de-monolith Stage 7).
capture = ["dep:tokio", "dep:serde_json", "dep:kirra-capture-schema"]

[dependencies]
# The posture types are wire-serialized (federation reports, the SSE stream). serde is
# lean — the spine dependency this crate carries.
serde = { version = "1", features = ["derive"] }
# Lightweight logging FACADE (not a runtime): the relocated kinematics_sim emits one
# `tracing::debug!` on a held command, and the capture writer logs drops. Compiles to
# near-nothing without a subscriber; carrying it keeps those modules verbatim. This is
# NOT one of the heavy runtime deps the lean foundation excludes (tokio/axum/rusqlite).
tracing = "0.1"

# --- `capture` feature only (de-monolith Stage 7) --------------------------------------
# The capture writer is a bounded mpsc + spawn_blocking JSONL drain; it needs only
# tokio's sync + rt, not the full runtime. serde_json serializes the JSONL line. The
# record wire schema is shared verbatim with the offline collector.
tokio = { version = "1", features = ["sync", "rt", "macros"], optional = true }
serde_json = { version = "1", optional = true }
kirra-capture-schema = { path = "../kirra-capture-schema", optional = true }

[dev-dependencies]
# The containment unit tests (Stage 4, moved verbatim) assert the byte-stable
# SCREAMING_SNAKE_CASE DenyCode token via JSON serialization. Test-only for the
# default (serde-only) build — the `capture` feature promotes serde_json to a normal dep.
serde_json = "1"
# Property-based tests for the SG2 containment invariant (admitted ⟹ corners within
# margin), asserted against a closed-form straight-corridor reference. Test-only.
proptest = "1"
