# crates/kirra-fleet-transport/Cargo.toml
#
# #296 — the FLEET-LANE transport spike (vehicle ↔ ops/cloud). STRICTLY QM:
# Zenoh never appears in the safety partition or the boundary channel (ADR-0006
# Clause 2; ADR-0007). This crate is a LEAF consumer that depends on the SDK;
# nothing under src/gateway/ or any safety path may depend on it.
#
# TLS AVAILABLE, OPT-IN (the toolchain wall was real but is now cleared): zenoh's
# TLS stack pulls a `time`/x509 chain that used to hit an E0119 conflicting-impl
# break on the bench toolchain (rustc 1.94.1). Bumping `time` 0.3.48 -> 0.3.53 in
# the workspace lockfile clears it, so `transport_tls` is enabled here. Zenoh's TLS
# uses the `ring` rustls provider (not aws-lc-rs), so it does not conflict with the
# verifier's ring-only rustls invariant. TLS is OPT-IN and byte-identical when
# unused: a session is encrypted ONLY when its endpoints use the `tls/...` scheme
# (see `transport::fleet_peer_config` + `FleetTlsConfig`); the default `tcp/...`
# path is unchanged. TLS is confidentiality + link auth, NOT the trust root — trust
# is still Ed25519 payload signatures verified at ingest (ADR-0007 Clause 1), so a
# plaintext deployment still verifies every payload. `transport_tcp` gives the
# plaintext peer transport. If a future transitive dep ever breaks the resolve, the
# `zenoh-pinned-deps-1-75` lockdown is the escape hatch.
[package]
name = "kirra-fleet-transport"
version = "0.1.0"
edition = "2021"
# MSRV floor inherited from the workspace root ([workspace.package]) — one
# source of truth per workspace, so `cargo <cmd> -p <member>` on an old
# toolchain fails the rust-version check up front, never mid-compile (#797 F3).
rust-version.workspace = true
description = "Fleet-lane (QM) Zenoh transport spike for KIRRA — untrusted carrier; trust is Ed25519 payload signatures; grants terminate at the verifier store (#296). Not a safety artifact."
repository = "https://github.com/kirra-systems/kirra-runtime-sdk"
license-file = "../../COPYRIGHT"
publish = false  # proprietary (see COPYRIGHT) — not for crates.io

[dependencies]
# R2: the lean fleet-lane types + the `FleetTrustStore` persistence seam — the
# source of truth for the fleet payload types + their verification
# (FederatedTrustReportV2 / verify_federated_report_signature_v2) and the narrow
# durable trust operations (nonce burn / clearance-grant persist / key lookup).
# This crate no longer depends on the heavy `kirra-verifier` service crate in its
# normal build; the ingest functions are generic over `FleetTrustStore`, which the
# verifier implements for its `VerifierStore` (used as the impl in tests).
kirra-fleet-types = { path = "../kirra-fleet-types" }
# FleetPosture (the wire-shared posture enum) lives in the lean foundation.
kirra-core = { path = "../kirra-core" }

# The fleet carrier. default-features OFF, features enabled explicitly (see the
# manifest note): `transport_tcp` = the plaintext peer transport; `transport_tls` =
# the opt-in encrypted link (`tls/...` endpoints; `fleet_peer_config`/`FleetTlsConfig`);
# `unstable` only for the explicit endpoint config the config seam + tests wire.
zenoh = { version = "1", default-features = false, features = ["transport_tcp", "transport_tls", "unstable"] }

serde = { version = "1", features = ["derive"] }
# JSON on the fleet wire (NOT bincode like kirra-wire-client's governor hot path):
# the fleet lane is a debuggable ops/cloud hop and trust is anchored in the
# Ed25519 signature over the canonical payload, not the codec — so JSON costs no
# trust and buys cross-tooling debuggability.
serde_json = "1"
# The grant envelope reuses the federation Ed25519 pattern (sign a canonical
# payload; verify against the controller's registered public key). No `rand_core`
# feature — keys are built via `SigningKey::from_bytes`, never `generate` (review L4).
ed25519-dalek = { version = "2" }
base64 = "0.22"
# Per-grant nonce minting on the signing side (#322 replay defense): 16 random
# bytes → hex, burned exactly once at ingest (verify-AND-consume).
rand = "0.8"

[dev-dependencies]
# The reference `FleetTrustStore` impl is the verifier's SQLite `VerifierStore`;
# the in-process round-trip tests drive the generic ingest functions through it.
# It is a DEV-dependency only — the production transport build stays off the
# verifier service tree (R2).
kirra-verifier = { path = "../.." }
# zenoh is async; the in-process two-session round-trip tests need a runtime.
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tempfile = "3"
