# crates/kirra-governor-service/Cargo.toml
#
# Minimal over-the-wire (UDP) KIRRA governor for the two-box governed-car
# prototype (docs/adr/KIRRA_BRINGUP_RUNBOOK.md, Prompt A).
#
# DEPENDENCY DISCIPLINE (ADR-0001): this target depends ONLY on serde + bincode
# + std (via the lean `kirra-core` crate). It deliberately does NOT depend on the
# parent `kirra-verifier` crate (which pulls tokio/axum/rusqlite/reqwest) —
# instead it depends on `kirra-core`, which carries the EXISTING verdict core (the
# kinematics-contract talisman) verbatim, so the verdict logic is the real,
# unmodified one while the dependency tree stays minimal and ROS/async-free for the
# QNX cert target.
[package]
name = "kirra-governor-service"
version = "0.1.0"
edition = "2021"
description = "Minimal UDP KIRRA governor (two-box prototype); wraps the verdict core verbatim. serde + bincode + std only — no ROS/async."
repository = "https://github.com/kirra-systems/kirra-runtime-sdk"
license-file = "../../COPYRIGHT"
publish = false  # proprietary (see COPYRIGHT) — not for crates.io

[[bin]]
name = "kirra-governor-service"
path = "src/main.rs"

[dependencies]
# The FROZEN kinematics-contract talisman (de-monolith Stage 3) — lean (serde-only),
# so this isolated governor stays minimal. Was a relative `#[path]` include of the
# root `src/gateway/kinematics_contract.rs`; now a proper dependency on the same code.
kirra-core = { path = "../kirra-core" }
serde = { version = "1", features = ["derive"] }
bincode = "1.3"
# Message authentication for the UDP command path (HMAC-SHA256). Both are pure
# Rust, no_std-capable, and async/ROS-free — consistent with the QNX/cert-target
# dependency discipline above. Versions pinned to the workspace root.
hmac = "0.13"
sha2 = "0.11"
