# crates/kirra-inline-governor/Cargo.toml
#
# EP-01 (M2) — the IN-LINE SHM enforcement path, assembled as a LIBRARY
# (closes G-1's software half). The governor verdict runs in-line between the
# planner's proposal and the actuator's release over shared memory — no HTTP
# anywhere on the enforced path:
#
#   writer (guest) ──publish──► SHM region ──seqlock read──► GovernorStation
#     (kirra-contract-channel)   (kirra-hv-carrier /          (decide_cycle →
#                                 InProcessRegion)             release token)
#                                                                  │
#                                        ActuatorStation ◄── view + token
#                                        (verify-before-release, ADR-0031)
#
# Every component is individually proven (frozen contract, seqlock trust chain,
# fail-closed consumer pipeline, domain-separated release token); this crate is
# the PRODUCTION-SHAPED assembly plus the FDIT fault matrix run against the
# assembled loop end to end. Lean and #![forbid(unsafe_code)] — the one unsafe
# boundary stays in kirra-hv-carrier (ADR-0006 Clause 3).
[package]
name = "kirra-inline-governor"
version = "0.1.0"
edition = "2021"
# MSRV floor inherited from the workspace root ([workspace.package]) — one
# source of truth per workspace, so `cargo <cmd> -p <member>` on an old
# toolchain fails the rust-version check up front, never mid-compile (#797 F3).
rust-version.workspace = true
description = "In-line doer→checker→release governor loop over the frozen SHM contract (EP-01 / G-1 software half)"
repository = "https://github.com/kirra-systems/kirra-runtime-sdk"
license-file = "../../COPYRIGHT"
publish = false  # proprietary (see COPYRIGHT) — not for crates.io

[[bin]]
name = "inline_demo"
path = "src/bin/inline_demo.rs"

[dependencies]
kirra-contract-channel = { path = "../kirra-contract-channel" }
kirra-core = { path = "../kirra-core" }
kirra-release-token = { path = "../kirra-release-token" }
# The demo bin + cross-process test map a real POSIX-SHM region (the same
# carrier the QNX target binding mirrors, ADR-0030). The LIB stays
# carrier-agnostic (any ContractReader); only the bin/tests bind POSIX SHM.
kirra-hv-carrier = { path = "../kirra-hv-carrier" }
ed25519-dalek = "2"
