[package]
name = "kirra-kpi-gate"
version = "0.1.0"
edition = "2021"
# MSRV floor inherited from the workspace root ([workspace.package]) — one
# source of truth per workspace, so `cargo <cmd> -p <member>` on an old
# toolchain fails the rust-version check up front, never mid-compile (#797 F3).
rust-version.workspace = true
description = "WS-3.1 scenario-KPI CI gate: thresholds unsafe_miss_rate / admissibility / hazard_recall over the generated scenario corpus"
repository = "https://github.com/kirra-systems/kirra-runtime-sdk"
license-file = "../../COPYRIGHT"
publish = false  # proprietary (see COPYRIGHT) — not for crates.io

[dependencies]
kirra-core = { path = "../kirra-core" }
kirra-planner = { path = "../kirra-planner" }
kirra-trajectory = { path = "../kirra-trajectory" }
kirra-doer-eval = { path = "../kirra-doer-eval" }
kirra-taj = { path = "../kirra-taj" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"

[[bin]]
name = "scenario_kpi_gate"
path = "src/bin/scenario_kpi_gate.rs"
