# crates/kirra-l3-e2e/Cargo.toml
#
# The L3 ON-TARGET end-to-end harness (ADR-0030 incr. 4 Phase-I, #279 subset).
# One self-contained binary that proves the ENTIRE L3 doer→checker→release chain
# across two real OS processes over the POSIX-SHM carrier, then measures the
# governor read/decide/sign/verify path — designed to cross-compile for
# `x86_64-pc-nto-qnx800` and run on the QNX 8.0 VM/target, but it runs on host
# Linux too (that's how it is verified before hardware day).
#
# Self-spawning (`current_exe()` + `--guest`) so it carries NO cargo-test
# machinery or host paths onto the target. This is a HARNESS crate (evidence
# tooling), not TCB: it may depend on kirra-core + the release token.
[package]
name = "kirra-l3-e2e"
version = "0.1.0"
edition = "2021"
description = "On-target L3 end-to-end harness — two-process doer→checker→release over POSIX SHM (QNX/host)"
repository = "https://github.com/kirra-systems/kirra-runtime-sdk"
license-file = "../../COPYRIGHT"
publish = false  # proprietary (see COPYRIGHT) — not for crates.io

[dependencies]
kirra-contract-channel = { path = "../kirra-contract-channel" }
kirra-hv-carrier = { path = "../kirra-hv-carrier" }
kirra-core = { path = "../kirra-core" }
kirra-release-token = { path = "../kirra-release-token" }
# The governor signing key for the harness rows (a fixed TEST key — provenance
# is the harness, never production identity). Same vetted crate as the seam.
ed25519-dalek = "2"
# SCHED_FIFO via pthread_setschedparam (POSIX — Linux and QNX/nto both have it).
libc = "0.2"
